--- a/templates/template_summary.html
+++ b/templates/template_summary.html
@@ -129,7 +129,7 @@
                     <!-- Display Enum4Linux results if available -->
                     {% if report.enum4linux_results %}
                         <h5>Enum4Linux - Results</h5>
-                        <pre>{{ report.enum4linux_results | join("\n") }}</pre>
+                        <pre>{{ report.enum4linux_results }}</pre>
                     {% endif %}
 
                     <!-- Display IIS Shortname results if available -->
