new module+new functionality

--- a/templates/template_summary.html
+++ b/templates/template_summary.html
@@ -245,7 +245,12 @@
 
         {% if report.wpscan_results %}
         <h5>WPScan - Results</h5>
-        <pre>{{ report.wpscan_results | join("\n") }}</pre>
+        <pre>{{ report.wpscan_results }}</pre>
+        {% endif %}
+
+        {% if report.lazyhunter_results %}
+        <h5>Lazy Hunter - Results</h5>
+        <pre>{{ report.lazyhunter_results }}</pre>
         {% endif %}
       </div>
     </div>
